--- a/problom1.html
+++ b/problom1.html
@@ -10,7 +10,8 @@
         ชื่อ, นามสกุล, อายุ, วัน เดือน ปีเกิด, สีที่ชอบ, เพศ, รูปประจําตัว, คติประจําใจ ลูกค้าอยากได้หน้าเว็บ ที่
         สามารถรับข้อมูลจากผู้ใช้งาน ผ่านหน้าเว็บ ได้ครบถ้วน
         </h1>
-        <div>Username :<input type="username"></div>
+        <div>ชื่อ :<input type="username"></div>
+        <div>นามสกุล :<input type="text"></div>
         <br>
         <div>Age :<input type="number"></div>
         <br>
@@ -22,7 +23,7 @@
         <br>
         <div>รูปประจําตัว :<br><input type="file"></div>
         <br>
-        <div>คติประจําใจ :<input type="text"></div>
+        <div>คติประจําใจ :<textarea></textarea></div>
         <br>
 </body>
 </html>
