--- a/Homework_codecamp7/resumetest/resumetest.html
+++ b/Homework_codecamp7/resumetest/resumetest.html
@@ -4,7 +4,7 @@
 <title>Resume - Chacitanon</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="The Curriculum Vitae of Joe Bloggs."/>
+<meta name="description" content="Resume"/>
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="style.css">
@@ -15,7 +15,6 @@
 	<div class="mainDetails ">
 	
 		<div id="headimg" class="quickFade">
-		
 			<img src="110315399_3148923128533075_1138098204441062438_o.jpg" alt="Pom" width="250"  height="250" />
 		</div>
 		
